--- a/main.css
+++ b/main.css
@@ -14,6 +14,6 @@ p {
 	background-position: center;
 	background: url(image.jpeg) no-repeat center/cover;
 	background-attachment: fixed;
-	-webkit-background-clip: text;
+	-webkit-background-clip: scroll;
 	-webkit-text-fill-color: rgb(225, 225, 255, 0);
 }
